Update versions packages, styles, js (#4)

--- a/project_name/static/css/templates/default.sass
+++ b/project_name/static/css/templates/default.sass
@@ -1,5 +1,6 @@
 *, :after, :before
 	box-sizing: border-box
+	-webkit-tap-highlight-color: rgba(255, 255, 255, 0)
 
 body
 	font-family: 'Open Sans', sans-serif
@@ -7,47 +8,108 @@ body
 	line-height: 1.5
 	font-size: 14px
 	overflow-x: hidden
+	@media screen and (max-width: $xs-max)
+	    min-width: 360px
+	&.fix-anim *
+		transition: none
 
-body.fix-anim *
-    transition: none
-
-h1, h2, h3, h4, h5, h6
+h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6
 	font-weight: 600
+
+button
+	font-family: inherit
+	padding: 0px
+	border: none
+	background-color: transparent
+	box-shadow: none
 
 a
 	text-decoration: none
 	outline: none
 	&:focus
-	    outline: none!important
+		outline: none
 
 img
 	max-width: 100%
 	height: auto
 
+sup
+	vertical-align: super
+	font-size: smaller
+
 .container
-	max-width: 1250px
+	max-width: 1270px
 	width: 100%
 	margin: 0 auto
 	padding: 0 15px
 	position: relative
-	@media screen and (max-width: $sm-max)
-	    padding: 0 10px
 
 .section-default
-	padding: 95px 0
+	padding: 100px 0
+	@media screen and (max-width: $md-max)
+	    padding: 80px 0
 	@media screen and (max-width: $sm-max)
 	    padding: 60px 0
 	@media screen and (max-width: $xs-max)
-	    padding: 36px 0
+	    padding: 40px 0
 
-.section-default--top
-    padding-top: 0
+	&-min
+		padding: 48px 0
+		@media screen and (max-width: $xs-max)
+		    padding: 40px 0px
 
-.section-default--bottom
-    padding-bottom: 0
+	&--top
+		padding-top: 0
+
+	&--bottom
+		padding-bottom: 0
+
+	&__bottom
+		display: flex
+		align-items: center
+		justify-content: center
+		margin-top: 48px
+		@media screen and (max-width: $sm-max)
+		    margin-top: 32px
+		@media screen and (max-width: $xs-max)
+		    margin-top: 24px
+		.btn + .btn
+		    margin-left: 20px
+
+.section-default-margin
+	margin: 100px 0
+	@media screen and (max-width: $md-max)
+	    margin: 80px 0
+	@media screen and (max-width: $sm-max)
+	    margin: 60px 0
+	@media screen and (max-width: $xs-max)
+	    margin: 40px 0
+
+	&-min
+		margin: 48px 0
+		@media screen and (max-width: $xs-max)
+		    margin: 40px 0
+
+	&--top
+		margin-top: 0
+
+	&--bottom
+		margin-bottom: 0
+
+.section-background
+	background-size: cover
+	background-position: center
+	background-repeat: no-repeat
+
+.section-relative
+	position: relative
 
 .page
-	overflow: hidden
+	overflow: clip
+	overflow-y: clip
+	overflow-x: clip
+	@media screen and (max-width: $xs-max)
+	    overflow: hidden
 
 .noscroll
 	overflow: hidden
