--- a/project_name/static/css/templates/placeholder.sass
+++ b/project_name/static/css/templates/placeholder.sass
@@ -1,230 +1,133 @@
-.h1
-    color: #eaeaea
-    margin-bottom: 40px
-    font-weight: 800
-    font-size: 60px
-    line-height: 82px
+.placeholder h1, .h1
+    margin-top: 40px
+    margin-bottom: 32px
+    font-size: 42px
+    line-height: 50px
+    color: #000
     @media screen and (max-width: $sm-max)
-        font-size: 48px
-        line-height: 56px
-        margin-bottom: 32px
+        margin-top: 24px
+        margin-bottom: 16px
+        font-size: 38px
+        line-height: 44px
     @media screen and (max-width: $xs-max)
-        margin-bottom: 24px
+        font-size: 26px
+        line-height: 32px
+
+.placeholder h2, .h2
+    margin-top: 40px
+    margin-bottom: 32px
+    font-size: 36px
+    line-height: 42px
+    color: #000
+    @media screen and (max-width: $sm-max)
+        margin-top: 24px
+        margin-bottom: 16px
+        font-size: 32px
+        line-height: 38px
+    @media screen and (max-width: $xs-max)
         font-size: 24px
-        line-height: 33px
-
-.h2
-    margin-top: 60px
-    margin-bottom: 40px
-    font-size: 30px
-    line-height: 41px
-    color: #303030
-    font-weight: 700
-    @media screen and (max-width: $sm-max)
-        margin-bottom: 32px
-    @media screen and (max-width: $xs-max)
-        margin-bottom: 16px
-        font-size: 22px
         line-height: 30px
-        margin-top: 48px
 
-.h3
-    margin-top: 60px
-    margin-bottom: 40px
-    font-size: 24px
-    line-height: 33px
-    color: #303030
-    font-weight: 700
+.placeholder h3, .h3
+    margin-top: 40px
+    margin-bottom: 32px
+    font-size: 33px
+    line-height: 40px
+    color: #000
     @media screen and (max-width: $sm-max)
-        margin-bottom: 32px
-    @media screen and (max-width: $xs-max)
-        margin-top: 48px
+        margin-top: 24px
         margin-bottom: 16px
+        font-size: 28px
+        line-height: 34px
+    @media screen and (max-width: $xs-max)
         font-size: 20px
-        line-height: 27px
+        line-height: 26px
 
-
-.h4
-    margin-top: 60px
-    margin-bottom: 40px
-    font-size: 22px
-    line-height: 30px
-    color: #303030
-    font-weight: 700
+.placeholder h4, .h4
+    margin-top: 40px
+    margin-bottom: 32px
+    font-size: 28px
+    line-height: 34px
+    color: #000
     text-transform: uppercase
     @media screen and (max-width: $sm-max)
-        margin-bottom: 32px
-    @media screen and (max-width: $xs-max)
+        margin-top: 24px
         margin-bottom: 16px
-        margin-top: 48px
+        font-size: 24px
+        line-height: 30px
+    @media screen and (max-width: $xs-max)
         font-size: 18px
         line-height: 24px
 
-.h5
-    margin-top: 60px
-    margin-bottom: 40px
-    font-size: 20px
-    line-height: 27px
-    color: #303030
-    font-weight: 700
+.placeholder h5, .h5
+    margin-top: 40px
+    margin-bottom: 32px
+    font-size: 24px
+    line-height: 30px
+    color: #000
+    font-weight: 600
     @media screen and (max-width: $sm-max)
-        margin-bottom: 32px
-    @media screen and (max-width: $xs-max)
+        margin-top: 24px
         margin-bottom: 16px
-        margin-top: 48px
-        font-size: 17px
-        line-height: 23px
-
-.h6
-    margin-top: 60px
-    margin-bottom: 40px
-    font-size: 16px
-    line-height: 22px
-    color: #303030
-    font-weight: 700
-    text-transform: uppercase
-    @media screen and (max-width: $sm-max)
-        margin-bottom: 32px
-    @media screen and (max-width: $xs-max)
-        margin-top: 48px
-        margin-bottom: 16px
-        font-size: 14px
-        line-height: 19px
-
-.placeholder
-    h1
-        color: #eaeaea
-        margin-bottom: 40px
-        font-weight: 800
-        font-size: 60px
-        line-height: 82px
-        @media screen and (max-width: $sm-max)
-            font-size: 48px
-            line-height: 56px
-            margin-bottom: 32px
-        @media screen and (max-width: $xs-max)
-            margin-bottom: 24px
-            font-size: 24px
-            line-height: 33px
-
-    h2
-        margin-top: 60px
-        margin-bottom: 40px
-        font-size: 30px
-        line-height: 41px
-        color: #303030
-        font-weight: 700
-        @media screen and (max-width: $sm-max)
-            margin-bottom: 32px
-        @media screen and (max-width: $xs-max)
-            margin-bottom: 16px
-            font-size: 22px
-            line-height: 30px
-            margin-top: 48px
-
-    h3
-        margin-top: 60px
-        margin-bottom: 40px
-        font-size: 24px
-        line-height: 33px
-        color: #303030
-        font-weight: 700
-        @media screen and (max-width: $sm-max)
-            margin-bottom: 32px
-        @media screen and (max-width: $xs-max)
-            margin-top: 48px
-            margin-bottom: 16px
-            font-size: 20px
-            line-height: 27px
-
-
-    h4
-        margin-top: 60px
-        margin-bottom: 40px
-        font-size: 22px
-        line-height: 30px
-        color: #303030
-        font-weight: 700
-        text-transform: uppercase
-        @media screen and (max-width: $sm-max)
-            margin-bottom: 32px
-        @media screen and (max-width: $xs-max)
-            margin-bottom: 16px
-            margin-top: 48px
-            font-size: 18px
-            line-height: 24px
-
-    h5
-        margin-top: 60px
-        margin-bottom: 40px
         font-size: 20px
-        line-height: 27px
-        color: #303030
-        font-weight: 700
-        @media screen and (max-width: $sm-max)
-            margin-bottom: 32px
-        @media screen and (max-width: $xs-max)
-            margin-bottom: 16px
-            margin-top: 48px
-            font-size: 17px
-            line-height: 23px
-
-    h6
-        margin-top: 60px
-        margin-bottom: 40px
+        line-height: 26px
+    @media screen and (max-width: $xs-max)
         font-size: 16px
         line-height: 22px
-        color: #303030
-        font-weight: 700
-        text-transform: uppercase
-        @media screen and (max-width: $sm-max)
-            margin-bottom: 32px
-        @media screen and (max-width: $xs-max)
-            margin-top: 48px
-            margin-bottom: 16px
-            font-size: 14px
-            line-height: 19px
+
+.placeholder h6, .h6
+    margin-top: 40px
+    margin-bottom: 32px
+    font-size: 20px
+    line-height: 26px
+    color: #000
+    font-weight: 600
+    @media screen and (max-width: $sm-max)
+        margin-top: 24px
+        margin-bottom: 16px
+        font-size: 18px
+        line-height: 24px
+    @media screen and (max-width: $xs-max)
+        font-size: 14px
+        line-height: 20px
 
 .placeholder
-	font-size: 14px
-	line-height: 24px
-	color: #303030
+	font-size: 16px
+	line-height: 22px
+	color: #1A1A1A
 	font-weight: 400
 	overflow: hidden
 	@media screen and (max-width: $sm-max)
-	    line-height: 20px
-	@media screen and (max-width: $xs-max)
-	    font-size: 13px
-	    line-height: 18px
-	a
-		color: #303030
-		text-decoration: underline
-		&:hover
-			text-decoration: none
+	    font-size: 14px
+	    line-height: 22px
+	a:not(.btn)
+		color: #FF6D00
+		text-decoration: none
+		@media screen and (min-width: $sm-min)
+            &:hover
+                text-decoration: underline
+
+	.btn
+	    margin-top: 16px
+	    margin-bottom: 16px
+	    @media screen and (max-width: $sm-max)
+	        margin-top: 12px
+	        margin-bottom: 12px
 
 	& > *:last-child
 		margin-bottom: 0 !important
 	& > *:first-child
 		margin-top: 0 !important
 
-
-	&--nth2
-	    > *:nth-child(2)
-	        margin-top: 0 !important
 	p
-		font-size: 14px
-		line-height: 24px
-		color: #303030
-		font-weight: 400
-		@media screen and (max-width: $xs-max)
-		    font-size: 13px
-		    line-height: 18px
 		& > *:last-child:not(img)
 			margin-bottom: 0 !important
 		& > *:first-child
 			margin-top: 0 !important
 	p + p
 	    margin-top: 16px
+	    @media screen and (max-width: $sm-max)
+	        margin-top: 12px
 
 	img
 		max-width: 100%
@@ -233,44 +136,44 @@
 		margin-bottom: 16px
 		@media screen and (max-width: $xs-max)
 		    margin: 0!important
-		    margin-bottom: 24px!important
-		    margin-top: 24px!important
+		    margin-bottom: 16px!important
+		    margin-top: 16px!important
 		    width: auto!important
 		    height: auto!important
 		    display: block!important
 		    float: none!important
 		&[style*="float: left"], &[style*="float:left"]
-			margin-right: 32px!important
-			margin-bottom: 32px!important
+			margin-right: 24px!important
+			margin-bottom: 24px!important
 			@media screen and (max-width: $sm-max)
 			    margin-right: 20px!important
 			    margin-bottom: 20px!important
 			@media screen and (max-width: $xs-max)
 			    margin: 0!important
-			    margin-bottom: 24px!important
-			    margin-top: 24px!important
+			    margin-bottom: 16px!important
+			    margin-top: 16px!important
 			    max-width: 100%important
 			    width: auto!important
 			    height: auto!important
 			    float: none!important
 		&[style*="float: right"], &[style*="float:right"]
-			margin-left: 32px!important
+			margin-left: 24px!important
 			margin-right: 0
-			margin-bottom: 32px!important
+			margin-bottom: 24px!important
 			@media screen and (max-width: $sm-max)
 			    margin-left: 20px!important
 			    margin-right: 0
 			    margin-bottom: 20px!important
 			@media screen and (max-width: $xs-max)
 			    margin: 0!important
-			    margin-bottom: 24px!important
-			    margin-top: 24px!important
+			    margin-bottom: 16px!important
+			    margin-top: 16px!important
 			    max-width: 100%important
 			    width: auto!important
 			    height: auto!important
 			    float: none!important
 
-	table img, table iframe,
+	table img, table iframe
 		max-width: initial !important
 		max-height: initial !important
 
@@ -291,66 +194,54 @@
 				margin-bottom: 0
 		td
 			text-align: left
-			color: #303030
-			font-weight: 300
-			padding: 16px
+			color: #1A1A1A
 			max-width: 400px
-			font-size: 14px
-			line-height: 24px
+			padding: 24px
 			@media screen and (max-width: $sm-max)
 			    min-width: 250px
 			@media screen and (max-width: $xs-max)
-			    font-size: 12px
-			    line-height: 18px
-			    padding: 15px
+			    padding: 14px
 			p
-			    font-size: 14px
-			    line-height: 24px
 			    margin: 0
-			    @media screen and (max-width: $xs-max)
-			        font-size: 12px
-			        line-height: 18px
 			p + p
 			    margin-top: 16px
+			    @media screen and (max-width: $sm-max)
+			        margin-top: 12px
 		th
 			text-align: left
-			color: #303030
-			font-weight: 500
-			padding: 16px
+			color: #1A1A1A
+			font-weight: 600
+			padding: 24px
 			max-width: 400px
-			font-size: 14px
-			line-height: 24px
+			background-color: #F3F3F3
+			font-family: 'ArialNarrow_'
 			@media screen and (max-width: $xs-max)
-			    font-size: 12px
-			    line-height: 18px
-			    padding: 15px
+			    padding: 14px
 			p
-			    font-size: 14px
-			    line-height: 24px
 			    margin: 0
-			    @media screen and (max-width: $xs-max)
-			        font-size: 12px
-			        line-height: 18px
 			p + p
 			    margin-top: 16px
+			    @media screen and (max-width: $sm-max)
+			        margin-top: 12px
 
-		tr
-		    border-bottom: #e8e8e8 1px solid
+		tr:nth-child(2n - 1)
+		    background-color: #F3F3F3
 
 		img
 		    max-width: 100% !important
 		    max-height: 100% !important
 		    vertical-align: top
 		    display: inline-block !important
-		    margin: 0!important
+		    float: none !important
+		    margin: 0 !important
 
 	.table-wrap
 		overflow: auto
-		margin-top: 40px
-		margin-bottom: 60px
-		@media screen and (max-width: $xs-max)
-		    margin-top: 28px
-		    margin-bottom: 32px
+		margin-top: 32px
+		margin-bottom: 32px
+		@media screen and (max-width: $sm-max)
+		    margin-top: 24px
+		    margin-bottom: 24px
 
 	.iframe-wrap
 	    position: relative
@@ -371,83 +262,64 @@
 	        height: 100%
 
 	blockquote
-		max-width: 90%
-		margin: auto
-		margin-top: 40px
-		margin-bottom: 40px
-		font-weight: 500
-		font-size: 17px
-		line-height: 24px
-		color: #666
-		font-style: italic
-		padding-left: 48px
+		width: 100%
+		margin-top: 32px
+		margin-bottom: 32px
+		font-size: 24px
+		line-height: 32px
+		color: #fff
+		padding: 48px
 		position: relative
-		min-height: 30px
+		background-color: #ff6d00
 		@media screen and (max-width: $sm-max)
-		    max-width: 100%
-		    margin-left: 40px
-		    margin-top: 32px
-		    margin-bottom: 32px
+		    font-size: 20px
+		    line-height: 26px
+		    margin-top: 24px
+		    margin-bottom: 24px
+		    padding: 32px
 		@media screen and (max-width: $xs-max)
-		    margin-top: 16px
-		    margin-bottom: 16px
-		    margin-left: 0
-		    font-size: 15px
+		    font-size: 18px
 		    line-height: 24px
-		&:before
-		    content: ''
-		    position: absolute
-		    top: -2px
-		    left: 0
-		    pointer-events: none
-		    width: 28px
-		    height: 30px
-		    background-image: url('../img/blockquote-icon.svg')
-		    background-size: contain
-		    background-repeat: no-repeat
-		    background-position: center
-		    @media screen and (max-width: $xs-max)
-		        top: 2px
-		p
-		    font-weight: 500
-		    font-size: 17px
-		    line-height: 24px
-		    margin: 0
-		    color: #666
-		    @media screen and (max-width: $xs-max)
-		        font-size: 15px
-		        line-height: 24px
+		    padding: 32px 24px
 		p + p
 		    margin-top: 16px
+		    @media screen and (max-width: $sm-max)
+		        margin-top: 12px
 
 	ul
 		margin-top: 16px
 		margin-bottom: 16px
+		@media screen and (max-width: $sm-max)
+		    margin-top: 12px
+		    margin-bottom: 12px
 		li
 			list-style: none
 			display: block
 			position: relative
-			padding-left: 26px
+			padding-left: 36px
 			&::before
 				content: ''
-				background-color: #93C718
-				width: 6px
-				height: 6px
-				min-width: 6px
-				min-height: 6px
+				background-color: #ff6d00
+				width: 10px
+				height: 10px
+				min-width: 10px
+				min-height: 10px
 				border-radius: 50%
 				margin: 0 10px 0 10px
 				display: inline-table
 				position: absolute
-				top: 9px
+				top: 8px
 				left: 0
 				@media screen and (max-width: $sm-max)
-				    top: 7px
+				    top: 5px
 	ol
 		margin-top: 16px
 		margin-bottom: 16px
 		counter-reset: list
 		list-style-type: decimal
+		@media screen and (max-width: $sm-max)
+		    margin-top: 12px
+		    margin-bottom: 12px
 		li
 			list-style: none
 			display: block
@@ -460,22 +332,64 @@
 				position: absolute
 				left: 0
 
+	ul
+	    ol
+	        padding-left: 24px
+	        @media screen and (max-width: $sm-max)
+	            padding-left: 16px
+
+	ol
+	    ul
+	        padding-left: 24px
+	        @media screen and (max-width: $sm-max)
+	            padding-left: 16px
+
+	ul
+	    ul
+	        padding-left: 24px
+	        @media screen and (max-width: $sm-max)
+	            padding-left: 16px
+
+	ol
+	    ol
+	        padding-left: 24px
+	        @media screen and (max-width: $sm-max)
+	            padding-left: 16px
+
 	hr
 		color: #000
-		background-color: #000
+		background-color: #1A1A1A
 		margin: 40px 0
 		opacity: 0.4
 		border: 0px none
 		height: 1px
 		clear: both
-		@media screen and (max-width: $xs-max)
+		@media screen and (max-width: $sm-max)
 		    margin: 24px 0
 
 	pre
 	    white-space: pre-wrap
 
 	strong
-	    font-weight: 500
+	    font-weight: 600
 
 	em
 	    font-style: italic
+
+	s, strike, del
+	    text-decoration: line-through
+
+	&--white
+	    *:not(.btn)
+	        color: #fff !important
+	    ul
+	        li
+	            &:before
+	                background-color: #fff!important
+	    hr
+	        background-color: #fff
+	    table
+	        tr:nth-child(2n)
+	            background-color: #1e1e1e
+	        th
+	            background-color: #1e1e1e
