--- a/project_name/templates/catalog/breadcrumbs.html
+++ b/project_name/templates/catalog/breadcrumbs.html
@@ -1,5 +1,12 @@
 {% for obj in breadcrumbs %}
-    <a class="breadcrumbs__item" href="{{ obj.get_absolute_url }}">
-        <span>{{ obj.title }}</span>
-    </a>
+    <li class="breadcrumbs__item">
+        <a class="breadcrumbs__content" href="{{ obj.get_absolute_url }}">
+            <span>
+                {{ obj.title }}
+            </span>
+        </a>
+        <span class="breadcrumbs__content">
+            /
+        </span>
+    </li>
 {% endfor %}
