--- a/project_name/templates/pages/breadcrumb.html
+++ b/project_name/templates/pages/breadcrumb.html
@@ -1,9 +1,13 @@
 {% load pages_tags %}
 {% for page in pages_navigation %}
-    <a class="breadcrumbs__item" href="{{ page.get_absolute_url }}">
-        {{ page.title }}
-    </a>
-    <span class="breadcrumbs__item">
-        /
-    </span>
+    <li class="breadcrumbs__item">
+        <a class="breadcrumbs__content" href="{{ page.get_absolute_url }}">
+            <span>
+                {{ page.title }}
+            </span>
+        </a>
+        <span class="breadcrumbs__content">
+            /
+        </span>
+    </li>
 {% endfor %}
