--- a/project_name/static/css/components/btn.sass
+++ b/project_name/static/css/components/btn.sass
@@ -1,10 +1,13 @@
 .btn
 	background-color: #fff
 	border: none
+	box-shadow: none
+	border-radius: 0px
 	font-size: 24px
 	line-height: 33px
 	font-weight: 700
 	color: #000
+	font-family: inherit
 	text-decoration: none
 	cursor: pointer
 	padding: 13px 47px
