--- a/project_name/static/css/layout/mfp.sass
+++ b/project_name/static/css/layout/mfp.sass
@@ -1,7 +1,7 @@
 .mfp-fade.mfp-bg
 	opacity: 0
 	transition: all 0.5s ease-in-out
-	background-color: rgba(0,0,0,0.65)
+	background-color: rgba(0, 0, 0, 0.6)
 	&.mfp-ready
 		opacity: 1
 
@@ -28,7 +28,7 @@
 
     &.mfp-bg
         opacity: 0
-        background-color: rgba(0,0,0,0.65)
+        background-color: rgba(0, 0, 0, 0.6)
         transition: all 0.5s ease-in-out
 
 
@@ -48,38 +48,43 @@
         &.mfp-bg
             opacity: 0
 
-
 button.mfp-close
-	width: 20px
-	height: 20px
+	width: 24px
+	height: 24px
 	background-image: url('../img/close-modal.svg')
 	background-repeat: no-repeat
 	background-size: contain
 	background-position: center
 	font-size: 0
-	top: 40px!important
-	right: 32px
+	top: 20px!important
+	right: 20px
 	opacity: 1
+	@media screen and (max-width: $sm-max)
+	    top: 20px!important
+	    right: 20px
 	@media screen and (max-width: $xs-max)
 	    top: 18px!important
 	    right: 18px
 
 
 .mfp-gallery .mfp-image-holder button.mfp-close
-	width: 20px
-	height: 20px
+	width: 24px
+	height: 24px
 	padding-right: 0
 	right: -25px
 	top: 16px!important
 	background-image: url('../img/close-img.svg')
-	opacity: 0.8
+	opacity: 1
 	transition: opacity 0.7s ease-in-out
+	@media screen and (max-width: $sm-max)
+	    top: 16px!important
+	    right: -25px
 	@media screen and (max-width: $xs-max)
-	    width: 14px
-	    height: 14px
+	    width: 20px
+	    height: 20px
 	    opacity: 1
 	    right: 10px
-	    top: 32px!important
+	    top: 28px!important
 	&:hover
 	    opacity: 1
 
@@ -108,22 +113,22 @@ button.mfp-close
 	-webkit-line-clamp: 2
 	-webkit-box-orient: vertical
 	@media screen and (max-width: $xs-max)
-	    font-size: 16px
-	    line-height: 22px
-	    padding-right: 25px
+	    font-size: 14px
+	    line-height: 18px
+	    padding-right: 28px
 
 .mfp-gallery .mfp-bottom-bar
 	margin-top: -70px
 	@media screen and (max-width: $xs-max)
 	    top: auto
-	    bottom: calc(100% - 52px)
+	    bottom: calc(100% - 48px)
 	    padding: 0 10px
 	    margin: 0
 
 button.mfp-arrow
 	width: 45px
 	height: 45px
-	opacity: 0.8
+	opacity: 1
 	top: 50%
 	transform: translateY(-50%)
 	border: none
@@ -147,7 +152,7 @@ button.mfp-arrow
 	    bottom: 0
 	    transform: none
 	    position: fixed
-	    background-size: 25px 25px
+	    background-size: 32px 32px
 	&:hover
 	    opacity: 1
 	&:active
